--- a/Projet-Unity/Prototype/Prototype.csproj
+++ b/Projet-Unity/Prototype/Prototype.csproj
@@ -69,6 +69,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ConstruireScript.cs" />
     <Compile Include="Assets\Scripts\Actions.cs" />
     <Compile Include="Assets\Scripts\BlockScript.cs" />
     <Compile Include="Assets\Scripts\ClimbScript.cs" />
@@ -77,7 +78,6 @@
     <Compile Include="Assets\Scripts\End.cs" />
     <Compile Include="Assets\Scripts\JeterScript.cs" />
     <Compile Include="Assets\Scripts\MouvementScript.cs" />
-    <Compile Include="Assets\Scripts\Move.cs" />
     <Compile Include="Assets\Scripts\Open.cs" />
     <Compile Include="Assets\Scripts\PushScript.cs" />
     <Compile Include="Assets\Scripts\Score.cs" />
